src/main/java/modelCheckCTL/controller/ctl/Parser/Parser.jj
options {
STATIC = false;
}

PARSER_BEGIN(Parser)
package modelCheckCTL.controller.ctl.Parser;

import java.io.IOException;
import java.util.Set;
import java.util.HashSet;
import modelCheckCTL.controller.types.modelCheckRelated.ModelCheckInputs;
import modelCheckCTL.controller.types.kripke.Kripke;
import modelCheckCTL.controller.types.kripke.State;
import modelCheckCTL.controller.types.kripke.Transition;

import static modelCheckCTL.utils.Utils.statesWithLabel;
import static modelCheckCTL.utils.Utils.union;
import static modelCheckCTL.utils.Utils.intersection;
import static modelCheckCTL.utils.Utils.subtract;
import static modelCheckCTL.utils.Utils.contains;
import static modelCheckCTL.utils.Utils.areEqual;

/**
* The Parser class does the heavy lifting for the model checking and contains the SAT algorithms. This Parser.java file is automatically generated from the Parser.jj file using JavaCC (using the terminal line `javacc Parser.jj`) inside this folder. That line also generates all the other files in this directory.
* The CTL parser rules approach from https://github.com/pedrogongora/antelope/blob/master/AntelopeCore/src/antelope/ctl/parser/CTLParser.jj, accessed 9/20
* All the individual methods like EX, EF, EG etc are modeled after the psuedocode SAT algorithms on page 227 of Logic In Computer Science by Michael Huth
* A compiler was used (the javaCC compiler specifically) so infinitely nested CTL formulas could be parsed correctly.
*/
public class Parser {

    /**
    * {@link Kripke} pulled out of the modelCheckInputs param. The Kripke is an object representation of the kripke text file (which is a representation of a directed graph) and contains the all the states, transitions and labels specified in the text file.
    */
    static Kripke kripke;

    /**
    * A {@link Set} of {@link State}s which has all the states in the "world" specified by the kripke. By the time this Parser is run, the Validator has already been run and has confirmed that the kripke contains no syntax errors.
    */
    static Set S;

    /**
   * A {@link String} of the CTL formula being checked. By the time this Parser is run, the Validator has already been run and has confirmed that the formula is well formed (contains no syntax errors).
    */
    static String formula;

    /**
    * The sole Parser constructor. It takes in a (@link ModelCheckInputs}, grabs the formula stream and sets the class properties from it.
    * @param {@link ModelCheckInputs} class has four properties - the first three are inputs: Kripke, the state to check and the model. The fourth, the modelStream, is generated within the constructor.
    */
    public Parser(ModelCheckInputs modelCheckInputs) {
	  this(modelCheckInputs.getFormulaStream(), null); // Not sure what this call does exactly, but it's needed to avoid JavaCC throwing a null error. Compare to the autogenerated constructor in CtlValidator.java line 168
	  kripke = modelCheckInputs.getKripke();
	  formula = modelCheckInputs.getFormula();
	  S = kripke.getStates();
    }

    /**
    * "Phi exists in a next state"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy EX
    * @return The {@link Set} of {@link State}s that hold for EX(phi)
    * @throws IOException
    */
    public static Set EX(Set phi) throws IOException {
        return preE(phi);
    }

    /**
    * "Phi exists in a future state"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy EF
    * @return The {@link Set} of {@link State}s that hold for EF(phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set EF(Set phi) throws IOException {
        Set tautology = S;
        return EU(tautology,phi);
    }

    /**
    * "Phi exists globally"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy EG
    * @return The {@link Set} of {@link State}s that hold for EG(phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set EG(Set phi) throws IOException  {
        return not(AF(not(phi)));
    }

    /**
    * "Phi is in all next states"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy AX
    * @return The {@link Set} of {@link State}s that hold for AX(phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set AX(Set phi) throws IOException {
        Set notPhi = not(phi);
        Set EXNotPhi = EX(notPhi);
        Set notEXNotPhi = not(EXNotPhi);
        return notEXNotPhi;
    }

    /**
    * "Phi is in the future in all paths from the current state"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy AF
    * @return The {@link Set} of {@link State}s that hold for AF(phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set AF(Set phi) throws IOException {
        Set X = S;
        Set Y = phi;
        while (!areEqual(X,Y)) {
            X = Y;
            Y = union(Y,preA(Y));
        }
        return Y;
    }

    /**
    * "Phi is globally present in paths from the current state"
    * @param phi is a {@link Set} of {@link State}s about which we want to know which states satisfy AG
    * @return The {@link Set} of {@link State}s that hold for AG(phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set AG(Set phi) throws IOException {
        return not(EF(not(phi)));
    }

    /**
    * "Phi until psi in a path from the current state"
    * @param phi {@link Set} of {@link State}s about which we want to know if they happen until psi
    * @param psi {@link Set} of {@link State}s about which we want to know if phi happens unil
    * @return The {@link Set} of {@link State}s that hold for E[phi U psi]
    * @throws ParseException
    * @throws IOException
    */
    public static Set EU(Set phi, Set psi) throws IOException {
        Set W = phi;
        Set X = S;
        Set Y = psi;
        while (!areEqual(X,Y)) {
            X = Y;
            Y = union(Y,intersection(W,preE(Y)));
        }
        return Y;
    }

    /**
    * "Phi until psi in all path from the current state"
    * @param phi {@link Set} of {@link State}s about which we want to know if they happen in all paths until psi
    * @param psi {@link Set} of {@link State}s about which we want to know if phi happens in all paths unil
    * @return The {@link Set} of {@link State}s that hold for A[phi U psi]
    * @throws ParseException
    * @throws IOException
    */
    public static Set AU(Set phi, Set psi) throws IOException {
        Set EGNotPsi = EG(not(psi));
        Set notPhiAndNotPsi = and(not(phi),not(psi));
        Set ENotPsiUNotPhiAndNotPsi = EU(not(psi),notPhiAndNotPsi);
        Set ENotPsiUNotPhiAndNotPsiOrEGNotPsi = or(ENotPsiUNotPhiAndNotPsi,EGNotPsi);
        Set notENotPsiUNotPhiAndNotPsiOrEGNotPsi = not(ENotPsiUNotPhiAndNotPsiOrEGNotPsi);
        return notENotPsiUNotPhiAndNotPsiOrEGNotPsi;
    }

    /**
    * The "or" set operator: "a or b"
    * @param a {@link Set} of {@link State}s we want to "or" with b
    * @param b {@link Set} of {@link State}s we want to "or" with a
    * @return The {@link Set} of {@link State}s in the union of a and b
    * @throws ParseException
    * @throws IOException
    */
    public static Set or(Set a, Set b) throws IOException {
        return union(a,b);
    }

    /**
    * The "and" set operator: "a and b"
    * @param a {@link Set} of {@link State}s we want to "and" with b
    * @param b {@link Set} of {@link State}s we want to "and" with a
    * @return The {@link Set} of {@link State}s in the intersection of a and b
    * @throws ParseException
    * @throws IOException
    */
    public static Set and(Set a, Set b) throws IOException {
        return intersection(a,b);
    }

    /**
    * The "not" set operator: "not a"
    * @param a {@link Set} of {@link State}s we want to use the "not" operator on
    * @return The {@link Set} of {@link State}s not in set a
    * @throws ParseException
    * @throws IOException
    */
    public static Set not(Set a) throws IOException {
        return subtract(S,a);
    }

    /**
    * The preE operation used in the CTL SAT algorithms.
    * @param phi {@link Set} of {@link State}s we want to use the preE operation on
    * @return The {@link Set} of {@link State}s that have a transition into phi (including states in phi that transition into other states in phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set preE(Set phi) throws IOException {
        Set S = kripke.getStates();
        Set preE = new HashSet();
        Set statesToCheck = S;
        for (Object stateToCheckObj : statesToCheck) {
            State stateToCheck = (State) stateToCheckObj;
            for (Object transitionToCheckObj : stateToCheck.getTransitions()) {
                Transition transitionToCheck = (Transition) transitionToCheckObj;
                State toState = transitionToCheck.getTo();
                if (contains(phi,toState)) {
                    preE.add(stateToCheck);
                }
            }
        }
        return preE;
    }

   /**
    * The preA operation used in the CTL SAT algorithms.
    * @param phi {@link Set} of {@link State}s we want to use the preA operation on
    * @return The {@link Set} of {@link State}s that only transition into phi (including states in phi that only transition into other states in phi)
    * @throws ParseException
    * @throws IOException
    */
    public static Set preA(Set phi) throws IOException {
        Set S = kripke.getStates();
        Set preA = new HashSet();
        Set statesToCheck = S;
        for (Object stateToCheckObj : statesToCheck) {
            Boolean isPreA = true;
            State stateToCheck = (State) stateToCheckObj;
            if (stateToCheck.getTransitions().size() > 0) {
                for (Object transitionToCheckObj : stateToCheck.getTransitions()) {
                    Transition transitionToCheck = (Transition) transitionToCheckObj;
                    State toState = transitionToCheck.getTo();
                    if (!contains(phi,toState)) {
                        isPreA = false;
                    }
                }
            } else {
                isPreA = false;
            }
            if (isPreA) {
                preA.add(stateToCheck);
            }
        }
        return preA;
    }

}

PARSER_END(Parser)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
      <NOT: "not">
    | <AND: "and">
    | <OR: "or">
    | <IMPLIES: "->">
    | <AX: "AX">
    | <AF: "AF">
    | <AG: "AG">
    | <EX: "EX">
    | <EF: "EF">
    | <EG: "EG">
    | <A: "A">
    | <E: "E">
    | <U: "U">
    | <LPAREN: "(">
    | <RPAREN: ")">
    | <ATOM: ["a"-"z"](["0"-"9"])*>
}

/**
* Root production. This is the method called to kick off the model checking
* @return {@link Set} of {@link State}s (if any) in the kripke which hold for the formula
*/
Set Parse() throws ParseException, IOException :
{
    Set f;
}

{
    f = formula(kripke.getStates()) <EOF>
    { return f; }
}

/**
* A formula can be an expression or an expression with a binary operator
* @param {@link Set} of {@link State}s of which we want to see if they hold for the formula
* @return {@link Set} of {@link State}s (if any) which hold for the formula
*/
Set formula(Set states) throws ParseException, IOException :
{
    Set e;
    Set b = null;
}
{
        e = expression(states) [ b = binaryOp(e,states) ]
        {
            if (b != null) { return b; }
            else { return e; }
        }

}

/**
* An expression can be: an atom, a not operation, a formula with parentheses around it, a temporal expression or an AU or EU operation (binary temporal expressions)
* @param {@link Set} of {@link State}s of which we want to see if they hold for the expression
* @return {@link Set} of {@link State}s (if any) which hold for the expression
*/
Set expression(Set states) throws ParseException, IOException :
{
 Token t;
 Set f;
 Set e;
 Set b;
}
{
        t = <ATOM>
        {
            Set statesWithLabels = statesWithLabel(states, t);
            // System.out.println(statesWithLabels);
            return statesWithLabels;
        }
    |   <NOT> f = formula(states)
        {
            return not(f);
        }
    |   <LPAREN> f = formula(states) <RPAREN>
        { return f; }
    |   f = temporalExpression(states)
        { return f; }
    | <E> <LPAREN> e = expression(states) <U> b = expression(states) <RPAREN>
      { return EU(e,b); }
    | "A" <LPAREN> e = expression(states) <U> b = expression(states) <RPAREN>
      { return AU(e,b); }
}

/**
* A binary operation can be: an and operation, an or operation or an implies operation
* @param subject is the {@link Set} of {@link State}s on the left side of the binary operator (ie, "a" in "a or b")
* @param states is the {@link Set} of {@link State}s of which we want to see which hold for the binary operation
* @return {@link Set} of {@link State}s (if any) which hold for the binary operation
*/
Set binaryOp(Set subject, Set states) throws ParseException, IOException :
{ Set predicate; }
{
        <AND> predicate = formula(states)
        { return and(subject,predicate); }
    |   <OR> predicate = formula(states)
        { return or(subject,predicate); }
    |   <IMPLIES> predicate = formula(states)
        {
            return or(not(subject),predicate);  /* (not subject or predicate) */
        }
}

/**
* A temporal expression can be the following operations: AX, AF, AG, EX, EF or EG.
* @param {@link Set} of {@link State}s of which we want to see if they hold for the temporal expression
* @return {@link Set} of {@link State}s (if any) which hold for the temporal expression
*/
Set temporalExpression(Set s) throws ParseException, IOException :
{ Set e; }
{
     <AX> e = expression(s)
      { return AX(e); }
    |<AF> e = expression(s)
      { return AF(e); }
    | <AG> e = expression(s)
      { return AG(e); }
    | <EX> e = expression(s)
      { return EX(e); }
    | <EF> e = expression(s)
      { return EF(e); }
    | <EG> e = expression(s)
      { return EG(e); }
}
